# cersonskylab-anisoap-ase

./: .gitignore  AUTODIFF_SUMMARY.md  CITATION.cff  FINAL_SUMMARY.md  LICENSE  NOTICE  README.md  calculator.py  descriptors.py  lr.pkl  model.py  pyproject.toml
anisoap_ase/: __init__.py  calculator.py  descriptors.py  descriptors_torch.py  model.py
anisoap_ase.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: anisoap_energy.py  harmonic_pipeline.py  water_energy.py
scripts/: bootstrap.sh
tests/: test_anisoap_linear_model.py  test_autodiff_forces.py  test_calculator.py  test_descriptors.py  test_forces.py  test_model.py
